splash page init

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        <!-- Fontawesome Kit -->
+        <script src="https://kit.fontawesome.com/3da1a747b2.js" crossorigin="anonymous"></script>
+        <!-- Tailwind CSS CDN -->
+        <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
+        <!-- Our CSS -->
+        <link rel="stylesheet" type="text/css" href="../src/components/styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta
@@ -25,6 +31,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
         <title>React Recoil App</title>
+        <style>
+          body {
+            background-color: aliceblue;
+          }
+        </style>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
