--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,11 +4,21 @@
         <meta charset="utf-8" />
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <!-- Fontawesome Kit -->
-        <script src="https://kit.fontawesome.com/3da1a747b2.js" crossorigin="anonymous"></script>
+        <script
+            src="https://kit.fontawesome.com/3da1a747b2.js"
+            crossorigin="anonymous"
+        ></script>
         <!-- Tailwind CSS CDN -->
-        <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
+        <link
+            href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css"
+            rel="stylesheet"
+        />
         <!-- Our CSS -->
-        <link rel="stylesheet" type="text/css" href="../src/components/styles.css">
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="../src/components/styles.css"
+        />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta
