dashboard and profile routes created

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,7 +17,7 @@
         <link
             rel="stylesheet"
             type="text/css"
-            href="../src/components/styles.css"
+            href="../../src/components/styles.css"
         />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
