update description on preview

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -45,24 +45,24 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
         <title>Code Locker</title>
-        <meta name="description" content="Code Locker is an intuitive and secure site built using React and styled with Tailwind CSS, where you can test and store your favorite code snippets.">
+        <meta name="description" content="Code Locker is an intuitive and secure site built using React and styled with Tailwind CSS, where you can test, store and share your favorite code snippets.">
 
         <!-- Google / Search Engine Tags -->
         <meta itemprop="name" content="Code Locker">
-        <meta itemprop="description" content="Code Locker is an intuitive and secure site built using React and styled with Tailwind CSS, where you can test and store your favorite code snippets.">
+        <meta itemprop="description" content="Code Locker is an intuitive and secure site built using React and styled with Tailwind CSS, where you can test, store and share your favorite code snippets.">
         <meta itemprop="image" content="./assets/preview/CodeLockerSS.jpg">
 
         <!-- Facebook Meta Tags -->
         <meta property="og:url" content=""> <!--change once deployed to Heroku-->
         <meta property="og:type" content="website">
         <meta property="og:title" content="Code Locker">
-        <meta property="og:description" content="Code Locker is an intuitive and secure site built using React and styled with Tailwind CSS, where you can test and store your favorite code snippets.">
+        <meta property="og:description" content="Code Locker is an intuitive and secure site built using React and styled with Tailwind CSS, where you can test, store and share your favorite code snippets.">
         <meta property="og:image" content="./assets/preview/CodeLockerSS.jpg">
 
         <!-- Twitter Meta Tags -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Code Locker">
-        <meta name="twitter:description" content="Code Locker is an intuitive and secure site built using React and styled with Tailwind CSS , where you can test and store your favorite code snippets.">
+        <meta name="twitter:description" content="Code Locker is an intuitive and secure site built using React and styled with Tailwind CSS , where you can test, store and share your favorite code snippets.">
         <meta name="twitter:image" content="./assets/preview/CodeLockerSS.jpg">
 
     </head>
